--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cmdk": "^1.0.0",
+    "dotenv": "^16.4.5",
     "lucide-react": "^0.441.0",
     "next": "^14.2.13",
     "next-themes": "^0.3.0",
