--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@tanstack/react-query": "^5.60.2",
     "@uploadthing/react": "^7.0.2",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "emoji-mart": "^5.6.0",
     "lucide-react": "^0.441.0",
